# DevJourney

./: .env.example  .gitignore  CURSOR_NOTION_README.md  README.md  analyze_cursor_data.py  export_cursor_data.bat  export_cursor_data.py  export_cursor_data.sh  extract_today_chats.py  notion_integration.py  pyproject.toml  requirements.txt  run.py  setup.py  test_analyzer.py  test_notion_api.py  update_notion_with_cursor.py
DevJourney/: .gitignore
devjourney/: __init__.py  main.py
devjourney/analyzers/: analyzer.py  llm.py
devjourney/cli/: __init__.py  notion_commands.py
devjourney/config/: __init__.py  settings.py
devjourney/extractors/: __init__.py  base.py  claude.py  cursor.py  factory.py  manager.py
devjourney/models/: analysis.py  conversation.py  notion.py
devjourney/notion/: __init__.py  client.py  formatter.py  service.py  sync.py
devjourney/ui/: __init__.py  app.py  setup_wizard.py
devjourney/utils/: __init__.py  credentials.py  service_manager.py
examples/: basic_usage.py
scripts/: devjourney.py  setup.py
src/devjourney/: __main__.py  database.py  main.py  models.py
src/devjourney/analysis/: insights.py  main.py  processor.py
src/devjourney/extractors/: cursor.py  cursor_improved.py
src/devjourney/mcp/: client.py  server.py
src/devjourney/notion/: client.py  database.py  sync.py
